objects/copado__Compliance_Rule_Criteria__c.object
<CustomObject>
    <description>This object stores the individual evaluation criteria that make up the compliance rule.</description>
    <fields>
        <fullName>copado__Compliance_Rule__c</fullName>
        <label>Compliance Rule</label>
        <referenceTo>copado__Compliance_Rule__c</referenceTo>
        <relationshipLabel>Compliance Rule Criteria</relationshipLabel>
        <relationshipName>Compliance_Rule_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Criteria__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Field_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Node__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Node</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Operator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Compliance Rule Criteria</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Compliance Rule Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Rule Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>